--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,7 @@ jobs:
         - uses: actions/checkout@v3
         - name: Verify release branch not exists
           run: |
-            git fetch --all
-            if git branch -a | grep -q release-${{ steps.dashed_version.outputs.result }}; then exit 1; else exit 0; fi
+            git fetch --all 
+            if git branch -a | grep -q release-${{ github.event.inputs.name }}; then exit 1; else exit 0; fi
         - name: Create release branch
           run: git fetch --all --tags && git checkout -b release-${{ github.event.inputs.name }} ${{ github.event.inputs.name }} && git push
