--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,4 +17,4 @@ jobs:
             git fetch --all 
             if git branch -a | grep -q release-${{ github.event.inputs.name }}; then exit 1; else exit 0; fi
         - name: Create release branch
-          run: git fetch --all --tags && git checkout -b release-${{ github.event.inputs.name }} ${{ github.event.inputs.name }} && git push
+          run: git fetch --all --tags && git checkout -b release-${{ github.event.inputs.name }} ${{ github.event.inputs.name }} && git push --set-upstream origin release-${{ github.event.inputs.name }}
